removed loader from hike add page and added detail page css

--- a/src/hike/HikeDetailPage.css
+++ b/src/hike/HikeDetailPage.css
@@ -1,3 +1,25 @@
-/* .HikeDetailPage {
+.AlbumDetailPage {
+  padding: 20px;
+}
 
-} */
+.AlbumDetailPage img {
+  height: 200px;
+}
+
+.AlbumDetailPage p {
+  margin: 15px 0;
+}
+
+.AlbumDetailPage a {
+  font-size: .9rem;
+  margin-right: 10px;
+}
+
+.AlbumDetailPage button.delete {
+  background: 0;
+  border: 0;
+  text-decoration: underline;
+  color: blue;
+  font-size: .9rem;
+  cursor: pointer;
+}
